fixed scroll overflow

--- a/Sticky Header/styles.scss
+++ b/Sticky Header/styles.scss
@@ -15,6 +15,8 @@ body {
 }
 
 #userManagementWidget {
+    display: flex;
+    flex-direction: column;
     background: white;
     box-shadow: 0px 2px 3px rgba(47, 60, 59, 0.13);
     border: 1px solid var(--support-color-05);
@@ -30,7 +32,7 @@ body {
 }
 
 .content {
-    height: 100%;
+    flex-grow: 1;
     overflow-y: scroll;
     font-size: 1rem;
     position: relative;
@@ -47,7 +49,11 @@ body {
         }
 
         & > li {
+            background-color: white;
             border-bottom: 1px solid var(--support-color-05);
+            &:hover{
+                filter: brightness(0.98);
+            }
         }
 
         &__header {
